src/objects/Target__c.object
<CustomObject>
    <fields>
        <fullName>API__c</fullName>
        <label>API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-ESIDSSR-298 - The account related to the target</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PSA-CLD-USNONE - Set to user that sets the status to Approved
                   Active flag determines whether Target is visible on the Service Grid</description>
        <inlineHelpText>Active flag determines whether Target is visible on the Service Grid</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <description>PSA-CLD-ESIDSSR-298- PV Agreement Status</description>
        <label>Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>PSA-CLD-ESIDSSR-298- PV Agreement Type</description>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(Co)-Development</fullName>
                </value>
                <value>
                    <fullName>(Co)-License</fullName>
                </value>
                <value>
                    <fullName>(Co)-Marketing</fullName>
                </value>
                <value>
                    <fullName>(Co)-Promotion</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Divestment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Location__c</fullName>
        <description>PSA-CLD-USNONE - Client Location</description>
        <label>Client Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Phase__c</fullName>
        <label>Clinical Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clinical_Phase</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countries_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIAPSA-MC-3288: As a PSA user I need the ability to select multiple countries on the RDS Product Line record type</description>
        <inlineHelpText>Check this field if the products are not associated to a country</inlineHelpText>
        <label>Countries NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <description>IQVIAPSA-MC-3288: As a PSA user I need the ability to select multiple countries on the RDS Product Line record type</description>
        <inlineHelpText>Select all countries that are applicable</inlineHelpText>
        <label>Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_PVA_Version__c</fullName>
        <description>PSA-CLD-ESIDSSR-298- Current PV Agreement Version</description>
        <label>Current PVA Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Number__c</fullName>
        <description>PSA-CLD-ESIDSSR-298 - PV Agreement Customer Reference Number</description>
        <label>Customer Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Activated__c</fullName>
        <description>IQVIAPSA -MC- 2777 - System must capture the date a particular product is activated/inactivated in the Target Services Grid for a Product</description>
        <inlineHelpText>The date the Target Product Line was activated.</inlineHelpText>
        <label>Date Activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dosage_Form__c</fullName>
        <description>PSA - CLD - USNONE - Dosage Form</description>
        <label>Dosage Form</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Dosage_Form__c</fullName>
        <formula>Formulation__r.Dosage_Form__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Dosage Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Name__c</fullName>
        <formula>Drug__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Strength__c</fullName>
        <formula>Formulation__r.Strength__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Strength</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Trade_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug Trade Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Drug__c</field>
                <operation>equals</operation>
                <valueField>Trade_Name__c.Drug__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Trade_Name__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Drug__c.Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.Program__c</valueField>
            </filterItems>
            <filterItems>
                <field>Drug__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Drug__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>PSA-CLD-USNONE - Set to user that sets the status to Approved
           Reference ID to an external system</description>
        <externalId>true</externalId>
        <inlineHelpText>Reference ID to an external system</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formulation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Formulation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Formulation__c.Drug__c</field>
                <operation>equals</operation>
                <valueField>$Source.Drug__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Formulation__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generic_Name__c</fullName>
        <description>PSA-CLD-USNONE- Generic Name</description>
        <label>Generic Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactivated_Date__c</fullName>
        <description>IQVIAPSA -MC- 2777 - System must capture the date a particular product is activated/inactivated in the Target Services Grid for a Product</description>
        <inlineHelpText>The date the Target Product Line was inactivated.</inlineHelpText>
        <label>Inactivated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <label>Indication</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigational_Product_Id__c</fullName>
        <description>PSA-CLD-USNONE - Investigational Product Id</description>
        <label>Investigational Product Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>PSA-CLD-USNONE - Used to identify the ID of this record in its source system (for data migration).</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to identify the ID of this record in its source system (for data migration).</inlineHelpText>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Type__c</fullName>
        <description>PSA-CLD-ESIDSSR-298- PVA Licensing Type</description>
        <label>Licensing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-License</fullName>
                </value>
                <value>
                    <fullName>Out-License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>PSA-CLD-USNONE - Location</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IQVIA_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_Countries__c</fullName>
        <description>PSA-CLD-USNONE - Multiple Countries</description>
        <label>Multiple Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PVA_ID__c</fullName>
        <description>PSA-CLD-ESIDSSR-298- PVA Unique ID (Autonumber PV-0001)</description>
        <displayFormat>PVA-{0000}</displayFormat>
        <label>PVA ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PVA_Template_Used__c</fullName>
        <description>PSA-CLD-ESIDSSR-298- PVA Template Used</description>
        <label>PVA Template Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IQVIA</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>PSA-CLD-ESIDSSR-298 - PV Agreement Partner</description>
        <label>Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <description>PSA-CLD-USNONE - Product Class</description>
        <label>Product Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>Food supplement</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Other Non-Drug</fullName>
                </value>
                <value>
                    <fullName>tbc - no data in Register</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>PSA-CLD-USNONE - Program</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Protocol_Number__c</fullName>
        <description>PSA-CLD-USNONE - Protocol Number</description>
        <label>Protocol Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Random_QC_Completed_Date__c</fullName>
        <description>PSA-CLD-ESIDSSR-298</description>
        <label>Random QC Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Random_QC_Completed__c</fullName>
        <description>PSA-CLD-ESIDSSR-298- PVA Random QC Completion</description>
        <label>Random QC Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Single_Country__c</fullName>
        <description>PSA-CLD-USNONE - Single Country</description>
        <label>Single Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <description>PSA-CLD-USNONE - Strength</description>
        <label>Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Field__c</fullName>
        <description>IQVIAPSA-5731: Adding a new field to the &quot;RDS_Product_Line&quot; Record Type of the &quot;Target&quot; Object.</description>
        <label>Therapeutic Area Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <description>PSA-CLD-USNONE - Therapeutic Area</description>
        <label>Therapeutic Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Therapy_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>PSA-CLD-USNONE - Title</description>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Name__c</fullName>
        <description>PSA-CLD-USNONE - Trade Name</description>
        <label>Trade Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Target</label>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <recordTypes>
        <fullName>PV_Agreement</fullName>
        <active>true</active>
        <description>PSA-CLD-ESIDSSR-298 - Target of type PV Agreement</description>
        <label>PV Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>RDS_Country</fullName>
        <active>true</active>
        <description>PSA-CLD-USNONE - Target of type Country</description>
        <label>RDS Country</label>
    </recordTypes>
    <recordTypes>
        <fullName>RDS_Product_Line</fullName>
        <active>true</active>
        <description>PSA-CLD-USNONE - Target of type Product Line</description>
        <label>RDS Product Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>RDS_Protocol</fullName>
        <active>true</active>
        <description>PSA-CLD-USNONE - Target of type Protocol</description>
        <label>RDS Protocol</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TGT_VR01_PSA_DEACTIVATED_DATE_BLANK</fullName>
        <active>true</active>
        <description>IQVIAPSA-MC-2777 - System must capture the date a particular product is activated/inactivated in the Target Services Grid for a Product</description>
        <errorConditionFormula>IF($RecordType.Name = &apos;RDS Product Line&apos; &amp;&amp;(!Active__c &amp;&amp;  (OR(ISNULL(Inactivated_Date__c),(Inactivated_Date__c - Today()) &gt;0 ))) ,  true, false)</errorConditionFormula>
        <errorMessage>The record cannot be saved if the &apos;Inactivated Date&apos; field is blank or is &quot;future date&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TGT_VR02_PSA_ACTIVATED_DATE_BLANK</fullName>
        <active>true</active>
        <description>IQVIAPSA-MC-2777 - System must capture the date a particular product is activated/inactivated in the Target Services Grid for a Product</description>
        <errorConditionFormula>IF($RecordType.Name = &apos;RDS Product Line&apos; &amp;&amp;(Active__c &amp;&amp;  (OR(ISNULL(Date_Activated__c),(Date_Activated__c - Today()) &gt;0 ))) ,  true, false)</errorConditionFormula>
        <errorMessage>The record cannot be saved if the &apos;Activated Date&apos; field is blank or is &quot;future date&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TGT_VR03_PROD_LINE_COUNTRY_BLANK</fullName>
        <active>true</active>
        <description>IQVIAPSA-MC-3288: As a PSA user I need the ability to select multiple countries on the RDS Product Line record type</description>
        <errorConditionFormula>IF($RecordType.Name = &apos;RDS Product Line&apos; &amp;&amp;(!Countries_NA__c &amp;&amp; (AND(ISNULL(Countries__c),ISPICKVAL(Single_Country__c,&quot;&quot;) ))) , true, false)</errorConditionFormula>
        <errorMessage>You cannot save the record without selecting the country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TGT_VR04_PROD_LINE_COUNTRY_VALIDATION</fullName>
        <active>true</active>
        <description>IQVIAPSA-MC-3288: As a PSA user I need the ability to select multiple countries on the RDS Product Line record type</description>
        <errorConditionFormula>IF($RecordType.Name = &apos;RDS Product Line&apos;&amp;&amp; (
OR
(
AND(Countries_NA__c , NOT(ISNULL(Countries__c))),
AND(NOT(ISPICKVAL(Single_Country__c,&quot;&quot;)),Countries_NA__c), 
AND(NOT(ISPICKVAL(Single_Country__c,&quot;&quot;)),NOT(ISNULL(Countries__c))), 
AND(NOT(ISNULL(Countries__c)),NOT(ISPICKVAL(Single_Country__c,&quot;&quot;)), Countries_NA__c)))
 , true, false)</errorConditionFormula>
        <errorMessage>You can choose only one option for country out of Single Country, Countries, or Countries NA</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TGT_VR05_RDS_PROTOCOL_VALIDATION</fullName>
        <active>true</active>
        <description>IQVIAPSA-3811</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
$RecordType.Name = &apos;RDS Protocol&apos; ,
OR(
ISBLANK( Protocol_Number__c ),
  ISPICKVAL( Therapeutic_Area__c , &quot;&quot;) ,
  ISPICKVAL( Clinical_Phase__c , &quot;&quot;) ,
 ISBLANK( API__c ) ,
 ISBLANK( Indication__c ) ) 


)</errorConditionFormula>
        <errorMessage>&apos;Protocol Number&apos; ,Therapeutic Area&apos;, &apos;Clinical Phase&apos;, &apos;Indication&apos;, &apos;API&apos; &apos;fields cannot be empty</errorMessage>
    </validationRules>
</CustomObject>